--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
                   direction: ltr;
                   font-size: 0px;
                   padding: 20px 0;
+                  padding-bottom: 0px;
                   text-align: center;
                 "
               >
@@ -472,6 +473,7 @@
                                 font-size: 19px;
                                 line-height: 1.5;
                                 text-align: left;
+                                padding-bottom: 8px;
                               "
                             >
                               ORTEX Perspectives on the S&P 500 for October
@@ -661,7 +663,8 @@
                   direction: ltr;
                   font-size: 0px;
                   padding: 20px 0;
-                  padding-top: 0;
+                  padding-bottom: 0px;
+                  padding-top: 8px;
                   text-align: center;
                 "
               >
@@ -711,6 +714,7 @@
                                 font-size: 19px;
                                 line-height: 1.5;
                                 text-align: left;
+                                padding-bottom: 8px;
                               "
                             >
                               Market developments in October
@@ -790,6 +794,8 @@
                           style="
                             font-size: 0px;
                             padding: 10px 25px;
+                            padding-top: 40px;
+                            padding-bottom: 40px;
                             word-break: break-word;
                           "
                         >
@@ -857,6 +863,8 @@
                   direction: ltr;
                   font-size: 0px;
                   padding: 20px 0;
+                  padding-bottom: 0px;
+                  padding-top: 8px;
                   text-align: center;
                 "
               >
@@ -906,6 +914,7 @@
                                 font-size: 19px;
                                 line-height: 1.5;
                                 text-align: left;
+                                padding-bottom: 8px;
                               "
                             >
                               October's Top Performing Trading Signal
@@ -992,6 +1001,8 @@
                   direction: ltr;
                   font-size: 0px;
                   padding: 20px 0;
+                  padding-bottom: 0px;
+                  padding-top: 8px;
                   text-align: center;
                 "
               >
@@ -1041,6 +1052,7 @@
                                 font-size: 19px;
                                 line-height: 1.5;
                                 text-align: left;
+                                padding-bottom: 8px;
                               "
                             >
                               Highest Short Seller Gain and Loss
@@ -1125,6 +1137,8 @@
                   direction: ltr;
                   font-size: 0px;
                   padding: 20px 0;
+                  padding-bottom: 0px;
+                  padding-top: 8px;
                   text-align: center;
                 "
               >
@@ -1174,6 +1188,7 @@
                                 font-size: 19px;
                                 line-height: 1.5;
                                 text-align: left;
+                                padding-bottom: 8px;
                               "
                             >
                               What's New on ORTEX
@@ -1250,7 +1265,7 @@
                 style="
                   direction: ltr;
                   font-size: 0px;
-                  padding: 20px 0;
+                  padding: 0px;
                   text-align: center;
                 "
               >
@@ -1362,9 +1377,9 @@
         </table>
       </div>
       <!--[if mso | IE]></td></tr></table><!
-      [endif]--><!--Social Media Icons--><!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="white-background-outlook" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+      [endif]--><!--Social Media Icons--><!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="white-background-outlook social-icons-outlook" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
       <div
-        class="white-background"
+        class="white-background social-icons"
         style="background-color: #ffffff; margin: 0px auto; max-width: 600px"
       >
         <table
@@ -1381,14 +1396,16 @@
                 style="
                   direction: ltr;
                   font-size: 0px;
-                  padding: 20px 0;
+                  padding: 10px;
+                  padding-bottom: 25px;
                   text-align: center;
                 "
               >
-                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="width:600px;" ><![endif]-->
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="social-icons-outlook" style="width:580px;" ><![endif]-->
                 <div
-                  class="mj-column-per-100 mj-outlook-group-fix"
+                  class="mj-column-per-100 mj-outlook-group-fix social-icons"
                   style="
+                    max-width: 125px;
                     font-size: 0;
                     line-height: 0;
                     text-align: left;
@@ -1397,7 +1414,7 @@
                     direction: ltr;
                   "
                 >
-                  <!--[if mso | IE]><table border="0" cellpadding="0" cellspacing="0" role="presentation" ><tr><td style="vertical-align:top;width:300px;" ><![endif]-->
+                  <!--[if mso | IE]><table border="0" cellpadding="0" cellspacing="0" role="presentation" ><tr><td style="vertical-align:top;width:290px;" ><![endif]-->
                   <div
                     class="mj-column-per-50 mj-outlook-group-fix"
                     style="
@@ -1414,50 +1431,64 @@
                       cellpadding="0"
                       cellspacing="0"
                       role="presentation"
-                      style="vertical-align: top"
                       width="100%"
                     >
                       <tbody>
                         <tr>
-                          <td
-                            align="center"
-                            style="
-                              font-size: 0px;
-                              padding: 10px 25px;
-                              word-break: break-word;
-                            "
-                          >
+                          <td style="vertical-align: top; padding: 0">
                             <table
                               border="0"
                               cellpadding="0"
                               cellspacing="0"
                               role="presentation"
-                              style="
-                                border-collapse: collapse;
-                                border-spacing: 0px;
-                              "
+                              width="100%"
                             >
                               <tbody>
                                 <tr>
-                                  <td style="width: 32px">
-                                    <a
-                                      href="https://twitter.com/ORTEX"
-                                      target="_blank"
-                                      ><img
-                                        alt="Ortex Official Twitter"
-                                        height="32"
-                                        src="https://i.ibb.co/dWJD1gB/twitter.png"
-                                        style="
-                                          border: 0;
-                                          display: block;
-                                          outline: none;
-                                          text-decoration: none;
-                                          height: 32px;
-                                          width: 100%;
-                                          font-size: 13px;
-                                        "
-                                        width="32"
-                                    /></a>
+                                  <td
+                                    align="right"
+                                    style="
+                                      font-size: 0px;
+                                      padding: 10px 25px;
+                                      padding-right: 4px;
+                                      word-break: break-word;
+                                    "
+                                  >
+                                    <table
+                                      border="0"
+                                      cellpadding="0"
+                                      cellspacing="0"
+                                      role="presentation"
+                                      style="
+                                        border-collapse: collapse;
+                                        border-spacing: 0px;
+                                      "
+                                    >
+                                      <tbody>
+                                        <tr>
+                                          <td style="width: 32px">
+                                            <a
+                                              href="https://twitter.com/ORTEX"
+                                              target="_blank"
+                                              ><img
+                                                alt="Ortex Official Twitter"
+                                                height="32"
+                                                src="https://i.ibb.co/dWJD1gB/twitter.png"
+                                                style="
+                                                  border: 0;
+                                                  display: block;
+                                                  outline: none;
+                                                  text-decoration: none;
+                                                  height: 32px;
+                                                  width: 100%;
+                                                  font-size: 13px;
+                                                "
+                                                width="32"
+                                            /></a>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
                                   </td>
                                 </tr>
                               </tbody>
@@ -1467,7 +1498,7 @@
                       </tbody>
                     </table>
                   </div>
-                  <!--[if mso | IE]></td><td style="vertical-align:top;width:300px;" ><![endif]-->
+                  <!--[if mso | IE]></td><td style="vertical-align:top;width:290px;" ><![endif]-->
                   <div
                     class="mj-column-per-50 mj-outlook-group-fix"
                     style="
@@ -1484,50 +1515,64 @@
                       cellpadding="0"
                       cellspacing="0"
                       role="presentation"
-                      style="vertical-align: top"
                       width="100%"
                     >
                       <tbody>
                         <tr>
-                          <td
-                            align="center"
-                            style="
-                              font-size: 0px;
-                              padding: 10px 25px;
-                              word-break: break-word;
-                            "
-                          >
+                          <td style="vertical-align: top; padding: 0">
                             <table
                               border="0"
                               cellpadding="0"
                               cellspacing="0"
                               role="presentation"
-                              style="
-                                border-collapse: collapse;
-                                border-spacing: 0px;
-                              "
+                              width="100%"
                             >
                               <tbody>
                                 <tr>
-                                  <td style="width: 32px">
-                                    <a
-                                      href="https://www.youtube.com/c/ORTEX_Official"
-                                      target="_blank"
-                                      ><img
-                                        alt="Ortex Official Youtube Channel"
-                                        height="32"
-                                        src="https://i.ibb.co/B6Ts3k5/youtube.png"
-                                        style="
-                                          border: 0;
-                                          display: block;
-                                          outline: none;
-                                          text-decoration: none;
-                                          height: 32px;
-                                          width: 100%;
-                                          font-size: 13px;
-                                        "
-                                        width="32"
-                                    /></a>
+                                  <td
+                                    align="left"
+                                    style="
+                                      font-size: 0px;
+                                      padding: 10px 25px;
+                                      padding-left: 4px;
+                                      word-break: break-word;
+                                    "
+                                  >
+                                    <table
+                                      border="0"
+                                      cellpadding="0"
+                                      cellspacing="0"
+                                      role="presentation"
+                                      style="
+                                        border-collapse: collapse;
+                                        border-spacing: 0px;
+                                      "
+                                    >
+                                      <tbody>
+                                        <tr>
+                                          <td style="width: 32px">
+                                            <a
+                                              href="https://www.youtube.com/c/ORTEX_Official"
+                                              target="_blank"
+                                              ><img
+                                                alt="Ortex Official Youtube Channel"
+                                                height="32"
+                                                src="https://i.ibb.co/B6Ts3k5/youtube.png"
+                                                style="
+                                                  border: 0;
+                                                  display: block;
+                                                  outline: none;
+                                                  text-decoration: none;
+                                                  height: 32px;
+                                                  width: 100%;
+                                                  font-size: 13px;
+                                                "
+                                                width="32"
+                                            /></a>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
                                   </td>
                                 </tr>
                               </tbody>
@@ -1545,8 +1590,8 @@
           </tbody>
         </table>
       </div>
-      <!--[if mso | IE]></td></tr></table><!
-      [endif]--><!--Footer--><!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="footer-outlook" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+      <!--[if mso | IE]></td></tr></table><![endif]-->
+      <!--Footer--><!--Footer--><!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="footer-outlook" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
       <div
         class="footer"
         style="background-color: #eff2f7; margin: 0px auto; max-width: 600px"
