fix image aspect ratios

--- a/index.html
+++ b/index.html
@@ -297,9 +297,10 @@
                                       display: block;
                                       outline: none;
                                       text-decoration: none;
-                                      height: 285px;
+                                      height: auto;
                                       width: 100%;
                                       font-size: 13px;
+                                      object-fit: contain;
                                     "
                                     width="550"
                                   />
@@ -547,9 +548,10 @@
                                       display: block;
                                       outline: none;
                                       text-decoration: none;
-                                      height: 357px;
+                                      height: auto;
                                       width: 100%;
                                       font-size: 13px;
+                                      object-fit: contain;
                                     "
                                     width="550"
                                   />
@@ -821,9 +823,10 @@
                                       display: block;
                                       outline: none;
                                       text-decoration: none;
-                                      height: 400px;
+                                      height: auto;
                                       width: 100%;
                                       font-size: 13px;
+                                      object-fit: contain;
                                     "
                                     width="550"
                                   />
